--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,12 +1,12 @@
-Release 5.2 BETA1
+Release 5.1 BETA2
 ------------------
 
 This is the second BETA release in the 5.1 release series that includes a number of
-new features as well performance optimizations in the classic HTTP transport.
+new features as well as bug fixes from the stable 5.0.x branch.
 
 Notable changes and features included in the 5.1 series:
 
-* ...
+* Application protocol upgrade support for non-blocking HTTP/1.1 connections.
 
 Change Log
 -------------------
@@ -16,10 +16,61 @@ Change Log
   - Use diamonds.
   - Add missing @Override.
   - Make better use of Map APIs.
-  - Remove redundant modifiers. …
+  - Remove redundant modifiers.
   - Use Collections.addAll() API instead of loops.
   - Remote extra semicolons (;).
   Contributed by Gary Gregory <garydgregory at gmail.com>
+
+* Bug fix: Fixed ignoring maxResultLength in toString method of EntityUtils.
+  Contributed by Klaw <Klawrar at gmail.com>
+
+* Bug fix: corrected handling of pushed stream refusal by the HTTP/2 protocol handler.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Improved connection re-use (keep-alive) tracking by the benchmark; disabled H2 push
+  when running the benchmark with HTTP/2.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Improved detection of disconnected endpoints by HttpAsyncRequester.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* HTTPCORE-626: in case of an unsuccessful `expect-continue` handshake do not make any
+  attempts to keep the client connection in a consistent state if the server intends
+  to close it on its end.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Move decision if the i/o session is to be terminated immediately to the protocol
+  handler by default attempt to terminate the i/o session gracefully.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Optimized request termination by the non-blocking HTTP/1.1 protocol handler in case of
+  a premature response or `expect-continue` handshake failure.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* `AbstractAsyncResponseConsumer` to handle gracefully an inconsistent state caused by
+  the caller signalling a response with no entity but subsequently calling methods
+  to consume data.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Revised HTTP protocol negotiation for non-blocking I/O sessions
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Revised TLS session initialization in I/O reactor code
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* HTTPCORE-653: CancelledKeyException triggers I/O reactor shutdown.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Make `ReactiveDataConsumer#failed` a no-op if it has already been marked as complete
+  (#227).
+  Contributed by Colin Weld <c_weld at backblaze.com>
+
+* HTTPCORE-644: non-blocking TLSv1.3 connections can end up in an infinite event spin
+  when closed concurrently by the local and the remote endpoints.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Calculate pendingOutputRequests before calling produceOutput to avoid race condition.
+  Contributed by Colin Weld <c_weld at backblaze.com>
 
 
 Release 5.1 BETA1
