--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,13 @@
+Release 5.2 ALPHA1
+------------------
+
+This is the first ALPHA release in the 5.2 release series that includes a number of
+new features as well as bug fixes from the stable 5.0.x and 5.1.x branches.
+
+* Let TimeValue/Timeout convert to and from Duration. #263.
+  Contributed by Gary Gregory <garydgregory at gmail.com>
+
+
 Release 5.1
 -----------
 
