--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -7,6 +7,9 @@ new features as well as bug fixes from the stable 5.0.x and 5.1.x branches.
 * Let TimeValue/Timeout convert to and from Duration. #263.
   Contributed by Gary Gregory <garydgregory at gmail.com>
 
+* Add URIBuilder#getFirstQueryParam(String) to query a parameter by name. #264.
+  Contributed by Gary Gregory <garydgregory at gmail.com>
+
 
 Release 5.1
 -----------
